objects/Quote.object
<CustomObject>
    <fields>
        <fullName>Invoice_Number__c</fullName>
        <inlineHelpText>Invoice number according to your accounting software.</inlineHelpText>
        <label>Invoice Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ptt_Customer_PO_number__c</fullName>
        <label>Customer PO number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ptt_Quote_Reference_Number__c</fullName>
        <formula>&quot;PT-&quot;&amp;  $User.ptt_BU_short_name__c  &amp;  QuoteNumber &amp; &quot;/&quot; &amp; TEXT(ptt_Revision_Letter__c) &amp; &quot;/&quot; &amp; $User.Alias</formula>
        <label>Quote Reference Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ptt_Revision_Letter__c</fullName>
        <inlineHelpText>If you are modifying already sent offer set next revision number.
This is included in Reference Number.</inlineHelpText>
        <label>Quote Revision Letter</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>A</fullName>
                    <default>true</default>
                    <label>A</label>
                </value>
                <value>
                    <fullName>B</fullName>
                </value>
                <value>
                    <fullName>C</fullName>
                </value>
                <value>
                    <fullName>D</fullName>
                </value>
                <value>
                    <fullName>E</fullName>
                </value>
                <value>
                    <fullName>F</fullName>
                </value>
                <value>
                    <fullName>G</fullName>
                </value>
                <value>
                    <fullName>H</fullName>
                </value>
                <value>
                    <fullName>I</fullName>
                </value>
                <value>
                    <fullName>J</fullName>
                </value>
                <value>
                    <fullName>K</fullName>
                </value>
                <value>
                    <fullName>L</fullName>
                </value>
                <value>
                    <fullName>M</fullName>
                </value>
                <value>
                    <fullName>N</fullName>
                </value>
                <value>
                    <fullName>O</fullName>
                </value>
                <value>
                    <fullName>P</fullName>
                </value>
                <value>
                    <fullName>Q</fullName>
                </value>
                <value>
                    <fullName>R</fullName>
                </value>
                <value>
                    <fullName>S</fullName>
                </value>
                <value>
                    <fullName>T</fullName>
                </value>
                <value>
                    <fullName>U</fullName>
                </value>
                <value>
                    <fullName>V</fullName>
                </value>
                <value>
                    <fullName>W</fullName>
                </value>
                <value>
                    <fullName>X</fullName>
                </value>
                <value>
                    <fullName>Y</fullName>
                </value>
                <value>
                    <fullName>Z</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ptt_Services_Demos__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Services &amp; Demos</label>
        <referenceTo>Service_and_Demontration__c</referenceTo>
        <relationshipLabel>Quotes</relationshipLabel>
        <relationshipName>Quotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ptt_Tax_number__c</fullName>
        <formula>Opportunity.Account.ptt_tax_number__c</formula>
        <label>Tax number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sf42_Additional_Information__c</fullName>
        <description>Area designated for supplement information about included or excluded products, quote details, and discount specifics. The user may add pictures and rich text upwards of 32000 characters.</description>
        <inlineHelpText>Area designated for supplement information about included or excluded products, quote details, and discount specifics. The user may add pictures and rich text upwards of 32000 characters.</inlineHelpText>
        <label>Additional Information</label>
        <length>32000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>sf42_Attn_Client_formula__c</fullName>
        <description>Adds &quot;Attn:&quot; no quotes to the front of a clients name for the Repair and Calibration quote template</description>
        <formula>&quot;Attn: &quot;&amp; TEXT(Contact.Salutation)&amp;&quot; &quot;+Contact.FirstName&amp;&quot; &quot;+Contact.LastName</formula>
        <inlineHelpText>Adds &quot;Attn:&quot; no quotes to the front of a clients name for the Repair and Calibration quote template</inlineHelpText>
        <label>Attn Client formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sf42_Closing_Quote_Statement__c</fullName>
        <label>Closing Quote Statement</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>sf42_Delivery_Time__c</fullName>
        <label>Delivery Time</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1-2 weeks</fullName>
                </value>
                <value>
                    <fullName>2-4 weeks</fullName>
                </value>
                <value>
                    <fullName>To be advised</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>sf42_Payment_Options__c</fullName>
        <label>Payment Options</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Payment: Bank Transfer  in advance</fullName>
                </value>
                <value>
                    <fullName>Payment: C.O.D (Cash on delivery)</fullName>
                </value>
                <value>
                    <fullName>Payment: in 5 days</fullName>
                </value>
                <value>
                    <fullName>Payment: in 30 days</fullName>
                </value>
                <value>
                    <fullName>Payment: Upon Completion of Job</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>sf42_Validity_Cancellation_Statement__c</fullName>
        <inlineHelpText>Specify terms when offer become invalid.</inlineHelpText>
        <label>Validity Cancellation Statement</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>sf42_Warranty_Information__c</fullName>
        <label>Warranty Information</label>
        <type>TextArea</type>
    </fields>
    <recordTypes>
        <fullName>Invoice</fullName>
        <active>true</active>
        <description>Create Invoice</description>
        <label>Invoice</label>
    </recordTypes>
    <recordTypes>
        <fullName>Quote</fullName>
        <active>true</active>
        <description>Create a Quote</description>
        <label>Quote</label>
    </recordTypes>
</CustomObject>